--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,9 +1,2 @@
-<h1>Bienvenue !</h1>
-<%
-    @joueurs.each do |j|%>
-       <p><% j.each do |i|%>
-            <p><%= i %></p>
-<%  
-        end%></p><br><%
-    end 
-%>
+<div class="app">
+</div>
